# todo-cli-tddschn

./: .bumpversion.cfg  CHANGELOG.md  Makefile  README.md  alembic.ini  cli.py  migration.md  pyproject.toml
alembic/: env.py
alembic/versions/: 60437ebcdc99_initial_migration.py  e48765a96fc9_add_date_added_to_todo_model.py
examples/: config.ini  config.yaml
tests/: test_todo_cli_tddschn.py
todo_cli_tddschn/: __init__.py  app.py  cli.py  config.py  database.py  info_commands.py  list_command.py  list_commands.py  models.py  todo_repl.py  todo_shell.py  utils.py  utils_commands.py
