[tool.poetry]
name = "todo-cli-tddschn"
version = "0.2.10"
description = "CLI Todo app made with typer and sqlite"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]

[tool.poetry.scripts]
todo = "todo_cli_tddschn.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
colorama = "0.4.4"
shellingham = "1.4.0"
tabulate = "^0.8.9"
logging-utils-tddschn = "^0.1.5"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
bump2version = "^1.0.1"
yapf = "^0.32.0"
pycallgraph2 = "^1.1.3"
icecream = "^2.1.2"
better-exceptions = "^0.3.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
