[tool.poetry]
name = "todo-cli-tddschn"
version = "2.0.0"
description = "CLI Todo app made with typer, sqlite and a REST API"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/todo-cli-tddschn"
repository = "https://github.com/tddschn/todo-cli-tddschn"
keywords = ["todo", "cli", "sqlite", "typer", "fastapi", "rest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/todo-cli-tddschn/issues"
[tool.poetry.scripts]
todo = "todo_cli_tddschn.cli:app"
itodo = "todo_cli_tddschn.todo_shell:main"

# wip
# rtodo = "todo_cli_tddschn.todo_repl:app"

[tool.poetry.dependencies]
python = "~3.10"
typer = "^0.4.1"
colorama = "0.4.4"
shellingham = "1.4.0"
tabulate = "^0.8.9"
logging-utils-tddschn = "^0.1.9"
sqlmodel = "^0.0.6"
fastapi = {version = "^0.75.2", extras = ["api"]}
uvicorn = {version = "^0.17.6", extras = ["api"]}
prompt-toolkit = "^3.0.29"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
bump2version = "^1.0.1"
yapf = "^0.32.0"
pycallgraph2 = "^1.1.3"
icecream = "^2.1.2"
better-exceptions = "^0.3.3"
toml = "^0.10.2"
black = "^22.3.0"
pyinstrument = "^4.1.1"
alembic = "^1.7.7"
rich = "^12.4.4"
pdir2 = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
